@@ -1,0 +1,3 @@
+<p>{INSTRUCTIONS}</p>
+<p>{CONFIRM}</p>
+<p>{DENY}</p>
